# api/docs/swagger.json
@@ -131,6 +131,11 @@
         },
         "/auth/update-password": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Update password",
                 "consumes": [
                     "application/json"
@@ -251,6 +256,11 @@
         },
         "/file-upload": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "File upload",
                 "consumes": [
                     "application/json"
@@ -346,6 +356,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Create a Hotel",
                 "consumes": [
                     "application/json"
@@ -438,6 +453,11 @@
         },
         "/hotels/add-room": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Add a room",
                 "consumes": [
                     "application/json"
@@ -568,6 +588,11 @@
         },
         "/likes": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Create or update like",
                 "consumes": [
                     "application/json"
@@ -606,9 +631,14 @@
                 }
             }
         },
-        "/likes/user-hotel": {
+        "/likes/user-post": {
             "get": {
-                "description": "Get like by user and hotel",
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get like by user and post",
                 "consumes": [
                     "application/json"
                 ],
@@ -618,12 +648,12 @@
                 "tags": [
                     "like"
                 ],
-                "summary": "Get like by user and hotel",
+                "summary": "Get like by user and post",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Hotel ID",
-                        "name": "hotel_id",
+                        "description": "Post ID",
+                        "name": "post_id",
                         "in": "query",
                         "required": true
                     }
@@ -646,6 +676,11 @@
         },
         "/orders": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Create a order",
                 "consumes": [
                     "application/json"
@@ -659,8 +694,8 @@
                 "summary": "Create a order",
                 "parameters": [
                     {
-                        "description": "order",
-                        "name": "order",
+                        "description": "CreateOrder",
+                        "name": "CreateOrder",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -703,20 +738,51 @@
                     "order"
                 ],
                 "summary": "Get user by id",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Order"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/rooms": {
+            "post": {
+                "description": "Get room by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "hotels"
+                ],
+                "summary": "Get room by id",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
+                        "description": "GetRoomReq",
+                        "name": "GetRoomReq",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.GetRoomReq"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Order"
+                            "$ref": "#/definitions/models.RoomInfo"
                         }
                     },
                     "500": {
@@ -1118,22 +1184,10 @@
                 "children_count": {
                     "type": "integer"
                 },
-                "date_first": {
-                    "type": "string"
-                },
-                "date_last": {
-                    "type": "string"
-                },
-                "full_name": {
-                    "type": "string"
-                },
                 "hotel_id": {
                     "type": "integer"
                 },
                 "room_id": {
-                    "type": "integer"
-                },
-                "user_id": {
                     "type": "integer"
                 }
             }
@@ -1189,7 +1243,7 @@
                 "hotels": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.Hotel"
+                        "$ref": "#/definitions/models.HotelAll"
                     }
                 }
             }
@@ -1208,7 +1262,56 @@
                 }
             }
         },
+        "models.GetRoomReq": {
+            "type": "object",
+            "properties": {
+                "hotel_id": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.Hotel": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "image_url": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "phone_number": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "number"
+                },
+                "rating": {
+                    "type": "number"
+                },
+                "room": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Room"
+                    }
+                },
+                "rooms_count": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.HotelAll": {
             "type": "object",
             "properties": {
                 "address": {
@@ -1370,6 +1473,38 @@
                 },
                 "image_url": {
                     "type": "string"
+                },
+                "is_active": {
+                    "type": "boolean"
+                },
+                "price_for_adults": {
+                    "type": "number"
+                },
+                "price_for_children": {
+                    "type": "number"
+                },
+                "room_type": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.RoomInfo": {
+            "type": "object",
+            "properties": {
+                "hotel_id": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "image_url": {
+                    "type": "string"
+                },
+                "images": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.AddRoomImage"
+                    }
                 },
                 "is_active": {
                     "type": "boolean"
