# api/models/order.go
@@ -6,21 +6,17 @@ type Order struct {
 	Id            int       `json:"id"`
 	HotelId       int       `json:"hotel_id"`
 	RoomId        int       `json:"room_id"`
-	FullName      string    `json:"full_name"`
 	DateFirst     time.Time `json:"date_first"`
-	DateLast      time.Time `json:"date_last"`
+	Days          int       `json:"days"`
 	AdultsCount   int       `json:"adults_count"`
 	ChildrenCount int       `json:"children_count"`
 	UserId        int       `json:"user_id"`
+	Summa         float64   `json:"summa"`
 }
 
 type CreateOrder struct {
-	HotelId       int       `json:"hotel_id"`
-	RoomId        int       `json:"room_id"`
-	FullName      string    `json:"full_name"`
-	DateFirst     time.Time `json:"date_first"`
-	DateLast      time.Time `json:"date_last"`
-	AdultsCount   int       `json:"adults_count"`
-	ChildrenCount int       `json:"children_count"`
-	UserId        int       `json:"user_id"`
+	HotelId       int `json:"hotel_id"`
+	RoomId        int `json:"room_id"`
+	AdultsCount   int `json:"adults_count"`
+	ChildrenCount int `json:"children_count"`
 }
